// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defined types 1`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT",
}
`;

exports[`defined types 2`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "DELETE_ACCOUNT",
}
`;

exports[`defined types 3`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "DELETE_ACCOUNTS",
}
`;

exports[`defined types 4`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "GET_ACCOUNT",
}
`;

exports[`defined types 5`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "GET_ACCOUNTS",
}
`;

exports[`defined types 6`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "UPDATE_ACCOUNTS",
}
`;

exports[`defined types 7`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "UPDATE_ACCOUNT",
}
`;

exports[`defined types 8`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "UPDATE_ACCOUNT_FIELD",
}
`;

exports[`defined types 9`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT_WIZARD",
}
`;

exports[`defined types 10`] = `
Object {
  "result": Object {
    "account": Object {
      "test": "success",
    },
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": true,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT_WIZARD_STEP_POLICY",
}
`;

exports[`defined types 11`] = `
Object {
  "result": Object {
    "account": Object {
      "test": "success",
    },
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "INVALID_ACCOUNT_WIZARD_STEP_POLICY",
}
`;

exports[`defined types 12`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT_WIZARD_STEP_ROLE",
}
`;

exports[`defined types 13`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "INVALID_ACCOUNT_WIZARD_STEP_ROLE",
}
`;

exports[`defined types 14`] = `
Object {
  "result": Object {
    "account": Object {
      "test": "success",
    },
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": true,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT_WIZARD_STEP_ARN",
}
`;

exports[`defined types 15`] = `
Object {
  "result": Object {
    "account": Object {
      "test": "success",
    },
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "INVALID_ACCOUNT_WIZARD_STEP_ARN",
}
`;

exports[`defined types 16`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": true,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": true,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT_SHOW",
}
`;

exports[`defined types 17`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "UPDATE_ACCOUNT_HIDE",
}
`;

exports[`defined types 18`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "EDIT_ACCOUNT_SHOW",
}
`;

exports[`defined types 19`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "EDIT_ACCOUNT_HIDE",
}
`;
